# benchmarking_android

./: .gitignore  README.md  build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/freeflowgfx/convolution/: CppUnitTest.kt  ExampleInstrumentedTest.kt  RegressionTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: convolution.cpp
app/src/main/java/com/freeflowgfx/convolution/: Cpp.kt  Kotlin.kt  MainActivity.kt  common.kt
app/src/main/java/com/freeflowgfx/convolution/benchmark/: utils.kt
app/src/main/java/com/freeflowgfx/convolution/implementation/: Cpp.kt  FunctionsUnderTest.kt  Kotlin.kt  KotlinFast.kt
app/src/main/java/com/freeflowgfx/convolution/sequence/: levenshtein.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/sharedTest/java/: CommonTest.kt
app/src/test/java/com/freeflowgfx/convolution/: ConvolutionUnitTest.kt  ExampleUnitTest.kt  KotlinFastUnitTest.kt  KotlinUnitTest.kt
app/src/test/java/com/freeflowgfx/sequence/: LevenshteinUnitTest.kt
